# backend/app/api/v1/router.py
@@ -6,6 +6,7 @@ from app.api.v1.endpoints import (
     meetings,
     team_members,
     teams,
+    webrtc,
 )
 
 api_router = APIRouter(prefix="/api/v1")
@@ -16,3 +17,4 @@ api_router.include_router(team_members.router)
 api_router.include_router(meetings.team_meetings_router)
 api_router.include_router(meetings.router)
 api_router.include_router(meeting_participants.router)
+api_router.include_router(webrtc.router)
